--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "docx": "^9.5.1",
+    "file-saver": "^2.0.5",
     "html2pdf.js": "^0.10.1",
     "lucide-vue-next": "^0.562.0",
     "pinia": "^3.0.4",
     "vue": "^3.5.24"
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.7",
     "@types/html2pdf.js": "^0.10.0",
     "@types/node": "^24.10.1",
     "@vitejs/plugin-vue": "^6.0.1",
